--- a/Resources/HTML/signout.html
+++ b/Resources/HTML/signout.html
@@ -13,6 +13,9 @@
     <link rel="stylesheet" type="text/css" href="../../Vendors/CSS/animate.css">
     <link rel="stylesheet" type="text/css" href="../CSS/style.css">
     <link rel="stylesheet" type="text/css" href="../CSS/queries.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="../JS/script.js"></script>
+	<script src="../JS/signout.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400">
     <title>MyMacroChef</title>
 
@@ -27,7 +30,7 @@
     <meta name="theme-color" content="#ffffff">
 </head>
 <body>
-    <header class="headermain">
+    <header class="headermain" style="background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../CSS/IMG/hero.jpg)">
         <nav>
             <div class="row">
                 <img src="../IMG/logo-white.png" alt="Logo" class="logo" srcset="">
@@ -37,7 +40,7 @@
                     <li><a href="../../index.html#works">How it works</a></li>
                     <li><a href="../../index.html#cities">Our cities</a></li>
                     <li><a href="../../index.html#plans">Plans</a></li>
-					<li><a href="signin.html">Sign In</a></li>
+					<li><a href="https://planmeal.auth.us-east-1.amazoncognito.com/login?response_type=token&client_id=7r2ii4jrhr7m616vtuj4qg2ggc&redirect_uri=https://s3.amazonaws.com/mymacrochefhj/Resources/HTML/profile.html">Sign In</a></li>
                 </ul>
                 <a class="mobile-nav-icon js--nav-icon"><i class="ion-navicon-round"></i></a>
             </div>
@@ -85,8 +88,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv-printshiv.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/selectivizr/1.0.2/selectivizr-min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="../../Vendors/JS/jquery.waypoints.min.js"></script>
-    <script src="../JS/script.js"></script>
 </body>
 </html>
