--- a/Resources/HTML/privacy.html
+++ b/Resources/HTML/privacy.html
@@ -27,7 +27,7 @@
     <meta name="theme-color" content="#ffffff">
 </head>
 <body>
-    <header class="headermain">
+    <header class="headermain" style="background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../CSS/IMG/hero.jpg)">
         <nav>
             <div class="row">
                 <img src="../IMG/logo-white.png" alt="Logo" class="logo" srcset="">
