--- a/Resources/HTML/profile.html
+++ b/Resources/HTML/profile.html
@@ -15,6 +15,18 @@
     <link rel="stylesheet" type="text/css" href="../CSS/style.css">
     <link rel="stylesheet" type="text/css" href="../CSS/queries.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<script type="text/javascript" src="../../lib/axios/dist/axios.standalone.js"></script>
+	<script type="text/javascript" src="../../lib/CryptoJS/rollups/hmac-sha256.js"></script>
+	<script type="text/javascript" src="../../lib/CryptoJS/rollups/sha256.js"></script>
+	<script type="text/javascript" src="../../lib/CryptoJS/components/hmac.js"></script>
+	<script type="text/javascript" src="../../lib/CryptoJS/components/enc-base64.js"></script>
+	<script type="text/javascript" src="../../lib/url-template/url-template.js"></script>
+	<script type="text/javascript" src="../../lib/apiGatewayCore/sigV4Client.js"></script>
+	<script type="text/javascript" src="../../lib/apiGatewayCore/apiGatewayClient.js"></script>
+	<script type="text/javascript" src="../../lib/apiGatewayCore/simpleHttpClient.js"></script>
+	<script type="text/javascript" src="../../lib/apiGatewayCore/utils.js"></script>
+	<script type="text/javascript" src="../../apigClient.js"></script>
+	<script src="../JS/profile.js"></script>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.9/dist/css/bootstrap-select.min.css">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.9/dist/js/bootstrap-select.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
@@ -32,17 +44,18 @@
     <meta name="theme-color" content="#ffffff">
 </head>
 <body>
-    <header class="headerother">
+    <header class="headerother" style="background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../CSS/IMG/hero.jpg)">
         <nav>
             <div class="row">
-                <img src="../IMG/logo-white.png" alt="Logo" class="logo" srcset="">
-                <img src="../IMG/logo.png" alt="Logo" class="logo-black" srcset="">
-                <ul class="main-nav js--main-nav">
+                <img src="../IMG/logo-white.png" alt="Logo" class="logo" srcset="" onclick="window.open('livetracking.html', '_self');">
+                <img src="../IMG/logo.png" alt="Logo" class="logo-black" srcset="" onclick="window.open('livetracking.html', '_self');">
+                <ul id="redirect-bar" class="main-nav js--main-nav">
                     <li><a href="profile.html">My Profile</a></li>
-					<li><a href="biiling.html">My Billing Info</a></li>
-					<li><a href="preferences.html">My Perferences</a></li>
+					<li><a href="preferences.html">My Preferences</a></li>
 					<li><a href="calendar.html">My Calendar</a></li>
                     <li><a href="addressbook.html">My Address Book</a></li>
+					<li><a href="billinginfo.html">My Billing Info</a></li>
+					<li><a href="livetracking.html">Live Tracking</a></li>
                     <li><a href="signout.html">Signout</a></li>
                 </ul>
                 <a class="mobile-nav-icon js--nav-icon"><i class="ion-navicon-round"></i></a>
@@ -54,14 +67,17 @@
         <div class="row">
             <h2>My Profile</h2>
         </div>
+		<div id="loading">
+		  <img id="loading-image" src="../IMG/loader.gif" alt="Loading..." />
+		</div>
         <div class="row">
-            <form target="preferences.html" mthod="post" action="#" class="contact-form">
+            <form mthod="post" class="contact-form" onsubmit="return update();">
                 <div class="row">
                     <div class="col span-1-of-3">
                         <label for="firstname">First name</label>
                     </div>
                     <div class="col span-2-of-3">
-                        <input class="form-control" type="text" name="firstname" id="firstname" value="Jane" disabled>
+                        <input class="form-control" type="text" name="firstname" id="firstname">
                     </div>
 				</div>
 				<div class="row">
@@ -69,7 +85,7 @@
                         <label for="lastname">Last name</label>
                     </div>
                     <div class="col span-2-of-3">
-                        <input class="form-control" type="text" name="lastname" id="lastname" value="Doe" disabled>
+                        <input class="form-control" type="text" name="lastname" id="lastname">
                     </div>
                 </div>
                 <div class="row">
@@ -78,10 +94,17 @@
                     </div>
                     <div class="col span-2-of-3">
                         <select class="form-control" name="sex" id="sex">
-                            <option value="male" selected>Male</option>
-                            <option value="female">Female</option>
-							<option value="other">Other</option>
+                            <option value="0" selected>Male</option>
+                            <option value="1">Female</option>
                         </select>
+                    </div>
+                </div>
+				<div class="row">
+					<div class="col span-1-of-3">
+                        <label for="phone">Phone no</label>
+                    </div>
+                    <div class="col span-2-of-3">
+                        <input class="form-control" placeholder="Your 10-digit phone no." type="number" name="phone" id="phone" min="1111111111" max="9999999999" required>
                     </div>
                 </div>
                 <div class="row">
@@ -114,11 +137,11 @@
                     </div>
                     <div class="col span-2-of-3">
                         <select class="form-control" name="activity" id="activity" required>
-                            <option value="noactivity" selected>Little to no exercise</option>
-                            <option value="lessactivity">Light exercise</option>
-							<option value="midactivity">Moderate exercise</option>
-							<option value="highactivity">Heavy exercise</option>
-							<option value="extremeactivity">Very heavy exercise</option>
+                            <option value="0" selected>Little to no exercise</option>
+                            <option value="1">Light exercise</option>
+							<option value="2">Moderate exercise</option>
+							<option value="3">Heavy exercise</option>
+							<option value="4">Very heavy exercise</option>
                         </select>
                     </div>
                 </div>
@@ -128,44 +151,9 @@
                     </div>
                     <div class="col span-2-of-3">
                         <input class="form-control" type="number" name="calorieintake" id="calorieintake" placeholder="Daily Calorie Intake (in Kcal/day)" min="1000" max="3500" required>
-						<script>
-							$( '#activity, #sex, #age, #height, #weight').change(function() {
-								var sex = document.getElementById("sex").value;
-								var age = document.getElementById("age").value;
-								var height = document.getElementById("height").value;
-								var weight = document.getElementById("weight").value;
-								var activity = document.getElementById("activity").value;
-								var bmr = 0;
-								var dci = 0;
-								if(sex == "male"){
-									bmr = (10*weight) + (6.25*height) - (5*age) + 5;
-								} else if(sex == "female"){
-									bmr = (10*weight) + (6.25*height) - (5*age) - 161;
-								} else {
-									bmr = (10*weight) + (6.25*height) - (5*age) + 5;
-								}
-								if(activity == "noactivity") {
-									dci = bmr*1.2;
-								} else if(activity == "lessactivity") {
-									dci = bmr*1.375;
-								} else if(activity == "midactivity") {
-									dci = bmr*1.55;
-								} else if(activity == "highactivity") {
-									dci = bmr*1.725;
-								} else if(activity == "extremeactivity") {
-									dci = bmr*1.9;
-								} else{
-									dci = bmr*1.2;
-								}
-								dci = Math.round(dci);
-								var bmi = Math.round( (weight/Math.pow(height/100, 2)) * 10 ) / 10;
-								document.getElementById("calorieintake").placeholder = "Suggested Calorie Intake "+dci+" Kcal/day";
-								var note = "Your BMI is "+bmi+" kg/m"+"2".sup()+"\nTo maintain your weight you need "+dci+" Kcal/day\nTo lose 0.5 kg per week you need "+(dci-500)+" Kcal/day\nTo lose 1 kg per week you need	"+(dci-1000)+" Kcal/day\nTo gain 0.5 kg per week you need "+(dci+500)+" Kcal/day<br>To gain 1 kg per week you need "+(dci+1000)+" Kcal/day"
-								document.getElementById("calnote").innerHTML = "<pre>" + note + "</pre>"
-							});
-						</script>
 						<div>
-						<p id="calnote"></p><span style="font-size:80%">For more info on BMI : <a href="https://bmiwiki.com/bmi-chart/">Visit bmiwiki.com</a></span><br>
+							<p id="calnote"></p><span style="font-size:80%">For more info on BMI : <a href="https://bmiwiki.com/bmi-chart/">Visit bmiwiki.com</a></span><br>
+						</div>
 					</div>
                 </div>
 				<div class="row">
@@ -192,169 +180,14 @@
                     </div>
                 </div><br>
 				<div class="row">
-					<center><h4>Select Cuisine Preference & Calories for each meal</h4></center>
-                </div><br>
-				<div class="row">
-                    <div class="col span-1-of-3">
-                        <label for="breakfast">Breakfast</label>
-                    </div>
-                    <div class="col span-2-of-3">
-						<div class="cuisine-select">
-							<select class="selectpicker" data-live-search="true" id="bfcuisine1" required>
-							  <option value="">Cuisine Preference 1</option>
-							  <option data-tokens="Chinese" value="1">Chinese</option>
-							  <option data-tokens="English" value="2">English</option>
-							  <option data-tokens="Italian" value="3">Italian</option>
-							  <option data-tokens="Indian" value="4">Indian</option>
-							  <option data-tokens="Korean" value="5">Korean</option>
-							</select>
-							<select class="selectpicker" data-live-search="true" id="bfcuisine2" required>
-							  <option value="">Cuisine Preference 2</option>
-							  <option data-tokens="Chinese" value="1">Chinese</option>
-							  <option data-tokens="English" value="2">English</option>
-							  <option data-tokens="Italian" value="3">Italian</option>
-							  <option data-tokens="Indian" value="4">Indian</option>
-							  <option data-tokens="Korean" value="5">Korean</option>
-							</select>
-							<select class="selectpicker" data-live-search="true" id="bfcuisine3" required>
-							  <option value="">Cuisine Preference 3</option>
-							  <option data-tokens="Chinese" value="1">Chinese</option>
-							  <option data-tokens="English" value="2">English</option>
-							  <option data-tokens="Italian" value="3">Italian</option>
-							  <option data-tokens="Indian" value="4">Indian</option>
-							  <option data-tokens="Korean" value="5">Korean</option>
-							</select>
-						</div>
-						<div class="calorie-radios">
-							<input type="radio" name="bfcal" value="light" required> Light (&#60;400 Kcal)&emsp;
-							<input type="radio" name="bfcal" value="moderate"> Moderate (600-1000 Kcal)&emsp;
-							<input type="radio" name="bfcal" value="heavy"> Heavy (&#62;1000 Kcal)
-						</div>
-                    </div>
-                </div>
-				<div class="row">
-                    <div class="col span-1-of-3">
-                        <label for="lunch">Lunch</label>
-                    </div>
-                    <div class="col span-2-of-3">
-						<div class="cuisine-select">
-							<select class="selectpicker" data-live-search="true" id="lncuisine1" required>
-							  <option value="">Cuisine Preference 1</option>
-							  <option data-tokens="Chinese" value="1">Chinese</option>
-							  <option data-tokens="English" value="2">English</option>
-							  <option data-tokens="Italian" value="3">Italian</option>
-							  <option data-tokens="Indian" value="4">Indian</option>
-							  <option data-tokens="Korean" value="5">Korean</option>
-							</select>
-							<select class="selectpicker" data-live-search="true" id="lncuisine2" required>
-							  <option value="">Cuisine Preference 2</option>
-							  <option data-tokens="Chinese" value="1">Chinese</option>
-							  <option data-tokens="English" value="2">English</option>
-							  <option data-tokens="Italian" value="3">Italian</option>
-							  <option data-tokens="Indian" value="4">Indian</option>
-							  <option data-tokens="Korean" value="5">Korean</option>
-							</select>
-							<select class="selectpicker" data-live-search="true" id="lncuisine3" required>
-							  <option value="">Cuisine Preference 3</option>
-							  <option data-tokens="Chinese" value="1">Chinese</option>
-							  <option data-tokens="English" value="2">English</option>
-							  <option data-tokens="Italian" value="3">Italian</option>
-							  <option data-tokens="Indian" value="4">Indian</option>
-							  <option data-tokens="Korean" value="5">Korean</option>
-							</select>
-						</div>
-						<div class="calorie-radios">
-							<input type="radio" name="lncal" value="light" required> Light (&#60;400 Kcal)&emsp;
-							<input type="radio" name="lncal" value="moderate"> Moderate (600-1000 Kcal)&emsp;
-							<input type="radio" name="lncal" value="heavy"> Heavy (&#62;1000 Kcal)
-						</div>
-                    </div>
-                </div>
-				<div class="row">
-                    <div class="col span-1-of-3">
-                        <label for="snack">Snack</label>
-                    </div>
-                    <div class="col span-2-of-3">
-						<div class="cuisine-select">
-							<select class="selectpicker" data-live-search="true" id="sncuisine1" required>
-							  <option value="">Cuisine Preference 1</option>
-							  <option data-tokens="Chinese" value="1">Chinese</option>
-							  <option data-tokens="English" value="2">English</option>
-							  <option data-tokens="Italian" value="3">Italian</option>
-							  <option data-tokens="Indian" value="4">Indian</option>
-							  <option data-tokens="Korean" value="5">Korean</option>
-							</select>
-							<select class="selectpicker" data-live-search="true" id="sncuisine2" required>
-							  <option value="">Cuisine Preference 2</option>
-							  <option data-tokens="Chinese" value="1">Chinese</option>
-							  <option data-tokens="English" value="2">English</option>
-							  <option data-tokens="Italian" value="3">Italian</option>
-							  <option data-tokens="Indian" value="4">Indian</option>
-							  <option data-tokens="Korean" value="5">Korean</option>
-							</select>
-							<select class="selectpicker" data-live-search="true" id="sncuisine3" required>
-							  <option value="">Cuisine Preference 3</option>
-							  <option data-tokens="Chinese" value="1">Chinese</option>
-							  <option data-tokens="English" value="2">English</option>
-							  <option data-tokens="Italian" value="3">Italian</option>
-							  <option data-tokens="Indian" value="4">Indian</option>
-							  <option data-tokens="Korean" value="5">Korean</option>
-							</select>
-						</div>
-						<div class="calorie-radios">
-							<input type="radio" name="sncal" value="light" required> Light (&#60;400 Kcal)&emsp;
-							<input type="radio" name="sncal" value="moderate"> Moderate (600-1000 Kcal)&emsp;
-							<input type="radio" name="sncal" value="heavy"> Heavy (&#62;1000 Kcal)
-						</div>
-                    </div>
-                </div>
-				<div class="row">
-                    <div class="col span-1-of-3">
-                        <label for="dinner">Dinner</label>
-                    </div>
-                    <div class="col span-2-of-3">
-						<div class="cuisine-select">
-							<select class="selectpicker" data-live-search="true" id="dncuisine1" required>
-							  <option value="">Cuisine Preference 1</option>
-							  <option data-tokens="Chinese" value="1">Chinese</option>
-							  <option data-tokens="English" value="2">English</option>
-							  <option data-tokens="Italian" value="3">Italian</option>
-							  <option data-tokens="Indian" value="4">Indian</option>
-							  <option data-tokens="Korean" value="5">Korean</option>
-							</select>
-							<select class="selectpicker" data-live-search="true" id="dncuisine2" required>
-							  <option value="">Cuisine Preference 2</option>
-							  <option data-tokens="Chinese" value="1">Chinese</option>
-							  <option data-tokens="English" value="2">English</option>
-							  <option data-tokens="Italian" value="3">Italian</option>
-							  <option data-tokens="Indian" value="4">Indian</option>
-							  <option data-tokens="Korean" value="5">Korean</option>
-							</select>
-							<select class="selectpicker" data-live-search="true" id="dncuisine3" required>
-							  <option value="">Cuisine Preference 3</option>
-							  <option data-tokens="Chinese" value="1">Chinese</option>
-							  <option data-tokens="English" value="2">English</option>
-							  <option data-tokens="Italian" value="3">Italian</option>
-							  <option data-tokens="Indian" value="4">Indian</option>
-							  <option data-tokens="Korean" value="5">Korean</option>
-							</select>
-						</div>
-						<div class="calorie-radios">
-							<input type="radio" name="dncal" value="light" required> Light (&#60;400 Kcal)&emsp;
-							<input type="radio" name="dncal" value="moderate"> Moderate (600-1000 Kcal)&emsp;
-							<input type="radio" name="dncal" value="heavy"> Heavy (&#62;1000 Kcal)
-						</div>
-                    </div>
-                </div><br>
-				
+					<p align="center" id="submitnote" hidden>User's profile has been updated</p>
+				</div>
                 <div class="row">
                     <div class="col span-1-of-3">
                         <label for="">&nbsp;</label>
                     </div>
                     <div class="col span-2-of-3">
-                        <input type="submit" value="Update!" onclick="setPrefRecom('pref')">
-						<span>&ensp;</span>
-						<input type="submit" value="Get Recommendation" onclick="setPrefRecom('recom')">
+                        <input class="submit-button" type="submit" value="Update!">
                     </div>
                 </div>
             </form>
@@ -394,6 +227,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/selectivizr/1.0.2/selectivizr-min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="../../Vendors/JS/jquery.waypoints.min.js"></script>
-    <script src="../JS/script.js"></script>
 </body>
 </html>
