--- a/Resources/HTML/signup.html
+++ b/Resources/HTML/signup.html
@@ -28,7 +28,7 @@
     <meta name="theme-color" content="#ffffff">
 </head>
 <body>
-    <header class="headerother">
+    <header class="headerother" style="background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../CSS/IMG/hero.jpg)">
         <nav>
             <div class="row">
                 <img src="../IMG/logo-white.png" alt="Logo" class="logo" srcset="">
