--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
     <link rel="apple-touch-icon" sizes="180x180" href="Resources\Favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="Resources\Favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="Resources\Favicons/favicon-16x16.png">
-    <link rel="manifest" href="Resources\Favicons/site.webmanifest">
     <link rel="mask-icon" href="Resources\Favicons/safari-pinned-tab.svg" color="#5bbad5">
     <link rel="shortcut icon" href="Resources\Favicons/favicon.ico">
     <meta name="msapplication-TileColor" content="#da532c">
@@ -28,7 +27,7 @@
     <meta name="theme-color" content="#ffffff">
 </head>
 <body>
-    <header class="headermain">
+    <header class="headermain" style="background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(Resources/CSS/IMG/hero.jpg)">
         <nav>
             <div class="row">
                 <img src="Resources/IMG/logo-white.png" alt="Logo" class="logo" srcset="">
@@ -38,7 +37,7 @@
                     <li><a href="#works">How it works</a></li>
                     <li><a href="#cities">Our cities</a></li>
                     <li><a href="#plans">Plans</a></li>
-					<li><a href="Resources/HTML/signup.html">Sign Up</a></li>
+					<li><a href="https://planmeal.auth.us-east-1.amazoncognito.com/signup?response_type=token&client_id=7r2ii4jrhr7m616vtuj4qg2ggc&redirect_uri=https://s3.amazonaws.com/mymacrochefhj/Resources/HTML/profile.html">Sign Up</a></li>
                 </ul>
                 <a class="mobile-nav-icon js--nav-icon"><i class="ion-navicon-round"></i></a>
             </div>
@@ -72,9 +71,9 @@
             </div>
             <div class="col span-1-of-4 box">
                 <i class="ion-ios-stopwatch-outline icon-big"></i>
-                <h3>Ready in 20 minutes</h3>
+                <h3>Delivery on time</h3>
                 <p>
-                    You're only twenty minutes away from your delicious and 
+                    You're only a sign up away from delicious and 
                     super healthy meals delivered right to your home. 
                     We work with the best chefs in each town to ensure that 
                     you're 100% happy.
@@ -97,7 +96,7 @@
                 <p>
                     We don't limit your creativity, which means you can order 
                     whatever you feel like. You can also choose from our menu 
-                    containing over 100 delicious meals. It's up to you!
+                    containing over 10k delicious meals. It's up to you!
                 </p>
             </div>
         </div>
@@ -152,7 +151,7 @@
 
     <section class="section-steps" id="works">
         <div class="row">
-            <h2>How it works &mdash; Simple as 1, 2, 3</h2>
+            <h2>How it works &mdash; Simple as 1, 2, 3, 4</h2>
         </div>
         <div class="row">
             <div class="col span-1-of-2 steps-box">
@@ -165,15 +164,19 @@
                 </div>
                 <div class="works-step">
                     <div>2</div>
-                    <p>Order your delicious meal using our mobile app or website. Or you can even call us!</p>
+                    <p>Create your meal profile using our website!</p>
                 </div>
                 <div class="works-step">
                     <div>3</div>
-                    <p>Enjoy your meal after less than 20 minutes. See you the next time!</p>
+                    <p>Provide the address for your meals!</p>
+                </div>
+				<div class="works-step">
+                    <div>4</div>
+                    <p>Never have to worry for your food ever again!</p>
                 </div>
 
-                <a href="#" class="btn-app"><img src="Resources/IMG/download-app.svg" alt="App Store Button"></a>
-                <a href="#" class="btn-app"><img src="Resources/IMG/download-app-android.png" alt="Play Store Button"></a>
+                <!--<a href="#" class="btn-app"><img src="Resources/IMG/download-app.svg" alt="App Store Button"></a>
+                <a href="#" class="btn-app"><img src="Resources/IMG/download-app-android.png" alt="Play Store Button"></a>-->
             </div>
         </div>
     </section>
@@ -245,7 +248,7 @@
                 </div>
                 <div class="city-feature">
                     <i class="ion-social-twitter icon-small"></i>
-                    <a href="#">@MyMacroChef_london</a>
+                    <a href="#">@MyMacroChef_lndon</a>
                 </div>
             </div>
         </div>
@@ -307,7 +310,7 @@
                             </ul>
                         </div>
                         <div>
-                            <a href="Resources/HTML/signup.html" class="btn btn-full">Sign up now</a>
+                            <a href="https://planmeal.auth.us-east-1.amazoncognito.com/signup?response_type=token&client_id=7r2ii4jrhr7m616vtuj4qg2ggc&redirect_uri=https://s3.amazonaws.com/mymacrochefhj/Resources/HTML/profile.html" class="btn btn-full">Sign up now</a>
                         </div>
                     </div>
                 </div>
@@ -328,7 +331,7 @@
                             </ul>
                         </div>
                         <div>
-                            <a href="Resources/HTML/signup.html" class="btn btn-ghost">Sign up now</a>
+                            <a href="https://planmeal.auth.us-east-1.amazoncognito.com/signup?response_type=token&client_id=7r2ii4jrhr7m616vtuj4qg2ggc&redirect_uri=https://s3.amazonaws.com/mymacrochefhj/Resources/HTML/profile.html" class="btn btn-ghost">Sign up now</a>
                         </div>
                     </div>
                 </div>
@@ -349,7 +352,7 @@
                             </ul>
                         </div>
                         <div>
-                            <a href="Resources/HTML/signup.html" class="btn btn-ghost">Sign up now</a>
+                            <a href="https://planmeal.auth.us-east-1.amazoncognito.com/signup?response_type=token&client_id=7r2ii4jrhr7m616vtuj4qg2ggc&redirect_uri=https://s3.amazonaws.com/mymacrochefhj/Resources/HTML/profile.html" class="btn btn-ghost">Sign up now</a>
                         </div>
                     </div>
                 </div>
